<resources>
    <string name="app_name">MKTFY</string>
    <string name="market_for_you_logo">Market for you logo</string>
    <string name="email">Email</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="password">Password</string>
    <string name="insert_your_password">Insert your password</string>
    <string name="i_forgot_my_password"><u>I forgot my password</u></string>
    <string name="login">Login</string>
    <string name="new_in_app_create_an_account">New in app? Create an account!</string>
    <string name="search_on_mktfy">Search on MKTFY</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="calgary">Calgary</string>
    <string name="category">Category</string>
    <string name="sample_price">$100</string>
    <string name="deals_for_you">Deals for you</string>
    <string name="search_city">Search City</string>
    <string name="brooks">Brooks</string>
    <string name="camrose">Camrose</string>
    <string name="hello_fragment">Hello FRAGMENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="last_name">Last Name</string>
    <string name="insert_your_last_name">Insert your last name</string>
    <string name="phone">Phone</string>
    <string name="address_information">Address Information</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="insert_your_city">Insert your city</string>
    <string name="address">Address</string>
    <string name="insert_your_address">Insert your address</string>
    <string name="next">Next</string>
    <string name="_000_000_0000">(000) 000 – 0000</string>
    <string name="insert_your_country">Insert your country</string>
    <string name="back_button">Back Button</string>
    <string name="create_account">Create Account</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="the_password_must_have_at_least_6_characters_and_must_contain_1_uppercase_and_1_number">The password must have at least 6 characters and must contain 1 uppercase and 1 number.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_strength">Password Strength</string>
    <string name="least_6_characters">Least 6 characterrs</string>
    <string name="_1_uppercase">1 Uppercase</string>
    <string name="_1_number">1 Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="update_password">Update Password</string>
    <string name="create_password">Create Password</string>
    <string name="create_my_account">Create My Account</string>
    <string name="by_checking_this_box_you_agree_to_our_terms_of_service_and_our_privacy_policy">By checking this box, you agree to our Terms of service and our Privacy Policy</string>
    <string name="forgot_passowrd">Forgot Passowrd</string>
    <string name="a_code_has_been_sent_to_your_email_mark_hamill_g_please_enter_the_verification_code">A code has been sent to your email mark.hamill@g*****, Please enter the verification code.</string>
    <string name="verification_code">Verification Code</string>
    <string name="_00_00_00">00 – 00 - 00</string>
    <string name="i_didn_t_receive_the_code_send_it_again"><u>I didn’t receive the code, send it again</u></string>
    <string name="verify">Verify</string>
    <string name="terms_and_condition"> <p>These Terms of Service constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and [business entity name] (“we,” “us” or “our”), concerning your access to and use of the [website name.com] website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”).</p> <br /> <p>You agree that by accessing the Site, you have read, understood, and agree to be bound by all of these Terms of Service. If you do not agree with all of these Terms of Service, then you are expressly prohibited from using the Site and you must discontinue use immediately.</p> <br /> <p>Supplemental Terms of Service or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Service at any time and for any reason.</p> <br /> <p>We will alert you about any changes by updating the “Last updated” date of these Terms of Service, and you waive any right to receive specific notice of each such change.</p> <br /> <p>It is your responsibility to periodically review these Terms of Service to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Service by your continued use of the Site after the date such revised Terms of Service are posted.</p> <br /> <p>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country.</p></string>
    <string name="acknowledge">Acknowledge</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text"> <p>Privacy is the ability of an individual or group to seclude themselves or information about themselves, and thereby express themselves selectively.</p> <p>When something is private to a person, it usually means that something is inherently special or sensitive to them. The domain of privacy partially overlaps with security, which can include the concepts of appropriate use, as well as protection of information. Privacy may also take the form of bodily integrity. The right not to be subjected to unsanctioned invasions of privacy by the government, corporations or individuals is part of many countries’ privacy laws, and in some cases, constitutions.</p> <p>In the business world, a person may volunteer personal details, including for advertising, in order to receive some sort of benefit. Public figures may be subject to rules on the public interest. Personal information which is voluntarily shared but subsequently stolen or misused can lead to identity theft.</p> <p>The concept of universal individual privacy is a modern concept primarily associated with Western culture, British and North American in particular, and remained virtually unknown in some cultures until recent times. Most cultures, however, recognize the ability of individuals to withhold certain parts of their personal information from wider society, such as closing the door to one’s home.</p> <br /> <p>Privacy is the ability of an individual or group to seclude themselves or information about themselves, and thereby express themselves selectively.</p> <p>When something is private to a person, it usually means that something is inherently special or sensitive to them. The domain of privacy partially overlaps with security, which can include the concepts of appropriate use, as well as protection of information. Privacy may also take the form of bodily integrity. The right not to be subjected to unsanctioned invasions of privacy by the government, corporations or individuals is part of many countries’ privacy laws, and in some cases, constitutions.</p> <p>In the business world, a person may volunteer personal details, including for advertising, in order to receive some sort of benefit. Public figures may be subject to rules on the public interest. Personal information which is voluntarily shared but subsequently stolen or misused can lead to identity theft.</p> <p>The concept of universal individual privacy is a modern concept primarily associated with Western culture, British and North American in particular, and remained virtually unknown in some cultures until recent times. Most cultures, however, recognize the ability of individuals to withhold certain parts of their personal information from wider society, such as closing the door to one’s home.</p></string>
    <string name="faq">FAQ</string>
    <string name="faq_words_test"><p>These Terms of Service constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and [business entity name] (“we,” “us” or “our”), concerning your access to and use of the [website name.com] website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”).</p> <br /> <p>You agree that by accessing the Site, you have read, understood, and agree to be bound by all of these Terms of Service. If you do not agree with all of these Terms of Service, then you are expressly prohibited from using the Site and you must discontinue use immediately.</p> <br /> <p>Supplemental Terms of Service or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Service at any time and for any reason.</p> <br /> <p>We will alert you about any changes by updating the “Last updated” date of these Terms of Service, and you waive any right to receive specific notice of each such change.</p> <br /> <p>It is your responsibility to periodically review these Terms of Service to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Service by your continued use of the Site after the date such revised Terms of Service are posted.</p> <br /> <p>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country.</p></string>
    <string name="how_mktfy_works">How MKTFY works?</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="jason_lewis">Jason Lewis</string>
    <string name="j">J</string>
    <string name="settings">Settings</string>
    <string name="account_information">Account Information</string>
    <string name="change_p">Change Password</string>
    <string name="my_purchases">My Purchases</string>
    <string name="my_listings">My Listings</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="create_offer">Create Offer</string>

    <string name="com_auth0_client_id">dyjCac6xadKbQ0ZzPIxTHBpIwsC3TZW5</string>
    <string name="com_auth0_domain">dev-ma82x04b.us.auth0.com</string>

</resources>