<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.vogproject.mktfy.models.createuser.UserDetails"/>
        <import type="com.vogproject.mktfy.models.EventType"/>
        <variable
            name="viewModel"
            type="com.vogproject.mktfy.models.createuser.CreateUserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginTop="33dp"
            android:onClick="@{() -> viewModel.onEvent(EventType.BACK)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/createAccount"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/home_page_purple"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="33dp"
            android:textSize="16sp"
            android:fontFamily="@font/open_sans_semibold"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"
            android:layout_marginStart="90dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
            android:id="@+id/contentFrame"
            android:layout_width="match_parent"
            android:layout_marginTop="71dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:background="@color/background_color"
            tools:context=".ui.createuser.CreateUserFragment">


        <TextView
            android:id="@+id/firstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/insertFirstName"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/first_name"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_name"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@={viewModel.createUser.firstName}"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertFirstName"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/last_name"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_last_name"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@={viewModel.createUser.lastName}"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastName"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:autofillHints="@string/last_name" />

        <TextView
            android:id="@+id/emailLabel2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertLastName"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/email"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_email"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@={viewModel.createUser.email}"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel2"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertEmail"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/phone"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insertPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:prefixText="+1"
            app:hintTextColor="@color/password_strength_color"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/create_user_details"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insertPhoneNumberbreakdown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:fontFamily="@font/open_sans"
                android:inputType="phone"
                android:maxLength="10"
                android:text="@={viewModel.createUser.phone}"
                android:background="@drawable/create_user_details"
                android:textSize="16sp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/addressInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertPhoneNumber"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/address_information"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressInformation"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/country"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertCountry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_country"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@={viewModel.createUser.country}"
            android:inputType="textAutoComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/cityLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertCountry"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/city"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertCity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_city"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@={viewModel.createUser.city}"
            android:inputType="textAutoComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityLabel"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/addressLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertCity"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textSize="16sp"
            android:text="@string/address"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/insertAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_your_address"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textLongMessage"
            android:text="@={viewModel.createUser.address}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressLabel"
            android:background="@drawable/create_user_details"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp" />

        <Button
            android:id="@+id/nextCreateButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/insertAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/next"
            android:onClick="@{() -> viewModel.onEvent(EventType.NEXT)}"
            android:backgroundTint="@null"
            android:background="@drawable/button_login_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="14dp"
            android:textAllCaps="false" />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>