<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/closeMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.menu.MenuFragment">

        <ImageView
            android:id="@+id/closeMenuButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cancel_button" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accountSummaryLogo"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:padding="15dp"
            android:background="@android:color/white"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeMenuButton"
            android:layout_marginTop="13dp">

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/circleLogoMenu"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="45dp"
                app:cardBackgroundColor="@color/purple"
                android:background="@drawable/circular_image_view"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/circleLogoLetterMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/j"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/open_sans_bold"
                    android:textSize="30sp" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <TextView
                android:id="@+id/userName"
                android:layout_width="148dp"
                android:layout_height="33dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/jason_lewis"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/circleLogoMenu"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollMenuContainer"
            android:layout_width="match_parent"
            android:layout_marginTop="187dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountSummaryLogo">

            <LinearLayout
                android:id="@+id/scrollMenuContainerc"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settingsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/settings"
                    android:fontFamily="@font/open_sans_bold"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/accountInformationOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/account_information"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/changePasswordOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/change_p"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/myPurchasesOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/my_purchases"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/myListingsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/my_listings"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/notificationsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/notifications"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/helpMenuOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/help"
                    android:fontFamily="@font/open_sans_bold"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/faqMenuOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/faq"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/contactUsMenuOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/contact_us"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/signOutMenuOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="118dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/sign_out"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:layout_marginBottom="25dp"
                    android:drawablePadding="280dp"
                    android:textColor="@color/sign_out_red"
                    app:drawableEndCompat="@drawable/ic_exit" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>